objects/advpm__Cross_Reference_Matter__c.object
<CustomObject>
    <customHelpPage>advpm__HelpCrossReferenceMatterRelationships</customHelpPage>
    <fields>
        <fullName>advpm__Matter1_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter1__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter1 Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Cross Reference Matters</relationshipLabel>
        <relationshipName>Cross_Reference_Matters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Matter2_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter2__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter2 Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Cross Reference Matters (Not Used)</relationshipLabel>
        <relationshipName>Cross_Reference_Matters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <formula>advpm__Matter1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Parent_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Relationship</label>
        <referenceTo>advpm__Cross_Reference_Matter__c</referenceTo>
        <relationshipLabel>Cross Reference Matters</relationshipLabel>
        <relationshipName>Cross_Reference_Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Reciprocal_Relationship__c</fullName>
        <label>Reciprocal Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>advpm__Relationship__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Parent Of</fullName>
                </value>
                <value>
                    <fullName>Child Of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent Of</fullName>
                </value>
                <value>
                    <fullName>Child Of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cross Reference Matter</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter1__c</columns>
        <columns>advpm__Matter2__c</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Parent_Relationship__c</columns>
        <columns>advpm__Relationship__c</columns>
        <columns>advpm__Reciprocal_Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Reference Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>